<resources>
    <string name="app_name">FoodHub_app</string>
    <string name="preference_file_name">FoodApp Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name_min_3_characters">Name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="register">Register</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="name_of_the_restaurant">Name of the Restaurant</string>
    <string name="question1">Q.1 I entered the wrong CVV, why did my transaction still go through?</string>
    <string name="answer1">A.1 The logic of validation of CVV resides with either payment gateways or banks. It is absolutely the choice of banks to have CVV as a mandatory input field or not. As per RBI guidelines, 2-Factor-Authentication is not mandatory for less than Rs.2000 transaction. It is not in control of the owner of the App. As an organisation, we don\'t store any card information.</string>
    <string name="question2">Q.2 Is there a minimum order value?</string>
    <string name="answer2">A.2 We have no minimum order value and you can order for any amount.</string>
    <string name="question3">Q.3 Is single order from many restaurants possible?</string>
    <string name="answer3">A.3 We currently do not support this functionality.</string>
    <string name="question4">Q.4 Do you support bulk orders</string>
    <string name="answer4">A.4 In order to provide all customers with a great selection and to ensure on time delivery of your meal, we reserve the right to limit the quantities depending on supply.</string>
    <string name="question5">Q.5 Unable to view the details in my profile.</string>
    <string name="answer5">A.5 Please check if your app is due for an update. If not, please share the details via support@xyz.in</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="u_don_t_have_an_account_sign_up_now_u"><u>Don\'t have an account? Sign up now</u></string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="food_hub"><u>Food Hub</u></string>
    <string name="Submit">Submit</string>
    <string name="password1">Password (Min. 5 characters)</string>
</resources>
