<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    android:theme="@style/AppTheme"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/forgotPasswordBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="5dp"
        android:src="@drawable/ic_back" />

    <ImageView
        android:id="@+id/imgForgotPasswordLogo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="8dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgForgotPasswordLogo"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/forgotPasswordMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordText"
        android:layout_marginTop="10dp"
        android:background="#FFF"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:padding="8dp" />

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordMobileNumber"
        android:layout_marginTop="5dp"
        android:background="#FFF"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordEmail"
        android:layout_marginTop="20dp"
        android:background="#B12C14"
        android:padding="8dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#FFF" />

</RelativeLayout>